--- a/src/css/jquery.cts.typeahead.css
+++ b/src/css/jquery.cts.typeahead.css
@@ -3,9 +3,9 @@
  *
  */
  .cts-selector-retriever {
+  margin:2px 0;
   padding: 2px 12px;
   font-size: 12px;
-  line-height: 32px;
   border: 2px solid #ccc;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
@@ -97,4 +97,35 @@
 .tt-suggestions .text-description {
   margin: 0;
   font-size:10px;
+}
+
+.cts-selector-passage-container {
+  height: 21px;
+}
+
+.cts-selector-passage-container .cts-selector-passage-number {
+  border: 2px solid #0097cf;
+  width:100px;
+  border-radius: 0;
+  border-left-width:0;
+  border-right-width: 0;
+  padding:1px;
+}
+
+.cts-selector-passage-container .cts-selector-passage-label {
+  border-left-width: 2px;
+  padding:1px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background-color: #0097cf;
+  color:#FFFFFF;
+  border: 2px solid #0097cf;
+  display: inline-block;
+  font-size:12px;
+}
+
+.cts-selector-passage-container .cts-selector-passage-number:last-child {
+  border-right-width: 2px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
