Working CTS Typeahead plugin

--- a/src/css/jquery.cts.typeahead.css
+++ b/src/css/jquery.cts.typeahead.css
@@ -101,6 +101,7 @@
 
 .cts-selector-passage-container {
   height: 21px;
+  margin:2px 0;
 }
 
 .cts-selector-passage-container .cts-selector-passage-number {
